--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -132,6 +132,8 @@
 <li><code>$figure-border</code></li>
 <li><code>$figure-margin</code></li>
 <li><code>$figure-padding</code></li>
+<li><code>$figure-caption-letter-spacing</code></li>
+<li><code>$figure-caption-size</code></li>
 </ul>
 </li>
 <li>New node modules:<ul>
