--- a/styleguide/item-application-global-custom-variables.html
+++ b/styleguide/item-application-global-custom-variables.html
@@ -52,7 +52,7 @@
                   #application.global.custom-variables
               </span>
             </span>
-            Application Custom Variables
+            Custom Variables
           </a>
         </h3>
 
