--- a/styleguide/item-application-global-variables.html
+++ b/styleguide/item-application-global-variables.html
@@ -52,7 +52,7 @@
                   #application.global.variables
               </span>
             </span>
-            Application Variables
+            Variables
           </a>
         </h3>
 
