--- a/styleguide/item-application-global.html
+++ b/styleguide/item-application-global.html
@@ -52,7 +52,7 @@
                   #application.global
               </span>
             </span>
-            Application Global
+            Global
           </a>
         </h2>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 76
+          Source: <code>style.scss</code>, line 85
         </div>
 
     </div>
