--- a/styleguide/item-application-layout.html
+++ b/styleguide/item-application-layout.html
@@ -52,7 +52,7 @@
                   #application.layout
               </span>
             </span>
-            Application Layout
+            Layout
           </a>
         </h2>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 92
+          Source: <code>style.scss</code>, line 101
         </div>
 
     </div>
