--- a/styleguide/item-frontend-components-classes-content.html
+++ b/styleguide/item-frontend-components-classes-content.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table-row" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-classes-content" class="kss-section kss-section--depth-4 is-fullscreen">
 
       <div class="kss-style">
         <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table-row">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-classes-content">
             <span class="kss-title__ref">
-              2.2.5.7
+              2.2.1.5
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table-row
+                  #frontend.components.classes.content
               </span>
             </span>
-            Responsive Table Row
+            Content
           </a>
         </h4>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table-row" data-kss-guides="true">
+            <a href="#kssref-frontend-components-classes-content" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table-row" data-kss-markup="true">
+            <a href="#kssref-frontend-components-classes-content" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,8 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table row element without the <code>tr</code> element.</p>
+            <p>Common content style classes that can be used to alter an existing elements&#39;
+style.</p>
 
           </div>
 
@@ -101,28 +102,19 @@
 
 
           <div class="kss-modifier__example">
-            <div class="table">
-  <div class="table-head">
-    <div class="table-row">
-      <div class="table-col">Head Col 1</div>
-      <div class="table-col">Head Col 2</div>
-      <div class="table-col">Head Col 3</div>
-    </div>
-  </div>
-  <div class="table-body">
-    <div class="table-row">
-      <div class="table-col">Body Col 1</div>
-      <div class="table-col">Body Col 2</div>
-      <div class="table-col">Body Col 3</div>
-    </div>
-  </div>
-  <div class="table-foot">
-    <div class="table-row">
-      <div class="table-col">Footer Col 1</div>
-      <div class="table-col">Footer Col 2</div>
-      <div class="table-col">Footer Col 3</div>
-    </div>
-  </div>
+            <p class="no-margin"><code>.no-margin</code></p>
+<p class="no-margin"><code>.no-padding</code></p>
+<div class="round bg-color-black color-white" style="display: inline-block; padding: 10px;"><code>.round</code></div>
+<div class="clearfix"><code>.clearfix</code></div>
+<div class="block"><code>.block</code></div>
+<div class="inline-block"><code>.inline-block</code></div>
+<hr>
+<code>.flex</code>
+<div class="flex">
+  <img src="http://via.placeholder.com/100x100" />
+  <img src="http://via.placeholder.com/100x100" />
+  <img src="http://via.placeholder.com/100x100" />
+  <img src="http://via.placeholder.com/100x100" />
 </div>
             <div class="kss-modifier__example-footer"></div>
           </div>
@@ -133,33 +125,24 @@
             <summary>
                 Markup
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;
-  &lt;div class&#x3D;&quot;table-head&quot;&gt;
-    &lt;div class&#x3D;&quot;table-row&quot;&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Head Col 1&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Head Col 2&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Head Col 3&lt;/div&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-  &lt;div class&#x3D;&quot;table-body&quot;&gt;
-    &lt;div class&#x3D;&quot;table-row&quot;&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Body Col 1&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Body Col 2&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Body Col 3&lt;/div&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-  &lt;div class&#x3D;&quot;table-foot&quot;&gt;
-    &lt;div class&#x3D;&quot;table-row&quot;&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Footer Col 1&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Footer Col 2&lt;/div&gt;
-      &lt;div class&#x3D;&quot;table-col&quot;&gt;Footer Col 3&lt;/div&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;p class&#x3D;&quot;no-margin&quot;&gt;&lt;code&gt;.no-margin&lt;/code&gt;&lt;/p&gt;
+&lt;p class&#x3D;&quot;no-margin&quot;&gt;&lt;code&gt;.no-padding&lt;/code&gt;&lt;/p&gt;
+&lt;div class&#x3D;&quot;round bg-color-black color-white&quot; style&#x3D;&quot;display: inline-block; padding: 10px;&quot;&gt;&lt;code&gt;.round&lt;/code&gt;&lt;/div&gt;
+&lt;div class&#x3D;&quot;clearfix&quot;&gt;&lt;code&gt;.clearfix&lt;/code&gt;&lt;/div&gt;
+&lt;div class&#x3D;&quot;block&quot;&gt;&lt;code&gt;.block&lt;/code&gt;&lt;/div&gt;
+&lt;div class&#x3D;&quot;inline-block&quot;&gt;&lt;code&gt;.inline-block&lt;/code&gt;&lt;/div&gt;
+&lt;hr&gt;
+&lt;code&gt;.flex&lt;/code&gt;
+&lt;div class&#x3D;&quot;flex&quot;&gt;
+  &lt;img src&#x3D;&quot;http://via.placeholder.com/100x100&quot; /&gt;
+  &lt;img src&#x3D;&quot;http://via.placeholder.com/100x100&quot; /&gt;
+  &lt;img src&#x3D;&quot;http://via.placeholder.com/100x100&quot; /&gt;
+  &lt;img src&#x3D;&quot;http://via.placeholder.com/100x100&quot; /&gt;
 &lt;/div&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 79
+          Source: <code>frontend/components/classes/_common.scss</code>, line 175
         </div>
 
     </div>
@@ -198,4 +181,3 @@
 <!-- Automatically built using <a href="https://github.com/kss-node/kss-node">kss-node</a>. -->
 </body>
 </html>
-/html>
