--- a/styleguide/item-frontend-components-classes-layout-row.html
+++ b/styleguide/item-frontend-components-classes-layout-row.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table-foot" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-classes-layout-row" class="kss-section kss-section--depth-5 is-fullscreen">
 
       <div class="kss-style">
-        <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table-foot">
+        <h5 class="kss-title kss-title--level-5">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-classes-layout-row">
             <span class="kss-title__ref">
-              2.2.5.5
+              2.2.1.6.2
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table-foot
+                  #frontend.components.classes.layout.row
               </span>
             </span>
-            Responsive Table Foot
+            Grid Row
           </a>
-        </h4>
+        </h5>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table-foot" data-kss-guides="true">
+            <a href="#kssref-frontend-components-classes-layout-row" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table-foot" data-kss-markup="true">
+            <a href="#kssref-frontend-components-classes-layout-row" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table foot element without the <code>tfoot</code> element.</p>
+            <p>Creates a grid row container.</p>
 
           </div>
 
@@ -101,9 +101,8 @@
 
 
           <div class="kss-modifier__example">
-            <div class="table">
-  <div class="table-foot">Table foot div vs. <code>tfoot</code> element.</div>
-</div>
+            <div class="row"><code>.row</code></div>
+<div class="row-full"><code>.row-full</code></div>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -113,13 +112,12 @@
             <summary>
                 Markup
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;
-  &lt;div class&#x3D;&quot;table-foot&quot;&gt;Table foot div vs. &lt;code&gt;tfoot&lt;/code&gt; element.&lt;/div&gt;
-&lt;/div&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;row&quot;&gt;&lt;code&gt;.row&lt;/code&gt;&lt;/div&gt;
+&lt;div class&#x3D;&quot;row-full&quot;&gt;&lt;code&gt;.row-full&lt;/code&gt;&lt;/div&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 43
+          Source: <code>frontend/components/classes/_layout.scss</code>, line 9
         </div>
 
     </div>
