--- a/styleguide/item-frontend-components-classes-pager.html
+++ b/styleguide/item-frontend-components-classes-pager.html
@@ -41,15 +41,15 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-pager" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-classes-pager" class="kss-section kss-section--depth-4 is-fullscreen">
 
       <div class="kss-style">
         <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-pager">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-classes-pager">
             <span class="kss-title__ref">
-              2.2.5.2
+              2.2.1.8
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.pager
+                  #frontend.components.classes.pager
               </span>
             </span>
             Pager
@@ -57,7 +57,7 @@
         </h4>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-pager" data-kss-guides="true">
+            <a href="#kssref-frontend-components-classes-pager" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-pager" data-kss-markup="true">
+            <a href="#kssref-frontend-components-classes-pager" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
