--- a/styleguide/item-frontend-components-classes-table-body.html
+++ b/styleguide/item-frontend-components-classes-table-body.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table-header" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-classes-table-body" class="kss-section kss-section--depth-4 is-fullscreen">
 
       <div class="kss-style">
         <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table-header">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-classes-table-body">
             <span class="kss-title__ref">
-              2.2.5.6
+              2.2.1.10
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table-header
+                  #frontend.components.classes.table-body
               </span>
             </span>
-            Responsive Table Head
+            Responsive Table Body
           </a>
         </h4>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table-header" data-kss-guides="true">
+            <a href="#kssref-frontend-components-classes-table-body" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table-header" data-kss-markup="true">
+            <a href="#kssref-frontend-components-classes-table-body" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table head element without the <code>thead</code> element.</p>
+            <p>Make a responsive table body element without the <code>tbody</code> element.</p>
 
           </div>
 
@@ -102,7 +102,7 @@
 
           <div class="kss-modifier__example">
             <div class="table">
-  <div class="table-head">Table head div vs. <code>thead</code> element.</div>
+  <div class="table-body">Table body div vs. <code>tbody</code> element.</div>
 </div>
             <div class="kss-modifier__example-footer"></div>
           </div>
@@ -114,12 +114,12 @@
                 Markup
             </summary>
             <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;
-  &lt;div class&#x3D;&quot;table-head&quot;&gt;Table head div vs. &lt;code&gt;thead&lt;/code&gt; element.&lt;/div&gt;
+  &lt;div class&#x3D;&quot;table-body&quot;&gt;Table body div vs. &lt;code&gt;tbody&lt;/code&gt; element.&lt;/div&gt;
 &lt;/div&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 23
+          Source: <code>frontend/components/classes/_common.scss</code>, line 62
         </div>
 
     </div>
