--- a/styleguide/item-frontend-components-classes-table-row.html
+++ b/styleguide/item-frontend-components-classes-table-row.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-classes-table-row" class="kss-section kss-section--depth-4 is-fullscreen">
 
       <div class="kss-style">
         <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-classes-table-row">
             <span class="kss-title__ref">
-              2.2.5.3
+              2.2.1.13
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table
+                  #frontend.components.classes.table-row
               </span>
             </span>
-            Responsive Table
+            Responsive Table Row
           </a>
         </h4>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table" data-kss-guides="true">
+            <a href="#kssref-frontend-components-classes-table-row" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table" data-kss-markup="true">
+            <a href="#kssref-frontend-components-classes-table-row" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table element without the <code>table</code> element.</p>
+            <p>Make a responsive table row element without the <code>tr</code> element.</p>
 
           </div>
 
@@ -101,7 +101,20 @@
 
 
           <div class="kss-modifier__example">
-            <div class="table">Table div vs. <code>table</code> element.</div>
+            <div class="table">
+  <div class="table-head">
+    <div class="table-row">Table head row div vs. <code>th</code> element.</div>
+    <div class="table-row">Another table head row</div>
+  </div>
+  <div class="table-body">
+    <div class="table-row">Table row div vs. <code>tr</code> element.</div>
+    <div class="table-row">Another table row</div>
+  </div>
+  <div class="table-foot">
+    <div class="table-row">Table foot row div vs. <code>tr</code> element.</div>
+    <div class="table-row">Another table foot row</div>
+  </div>
+</div>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -111,11 +124,24 @@
             <summary>
                 Markup
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;Table div vs. &lt;code&gt;table&lt;/code&gt; element.&lt;/div&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;
+  &lt;div class&#x3D;&quot;table-head&quot;&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Table head row div vs. &lt;code&gt;th&lt;/code&gt; element.&lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Another table head row&lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div class&#x3D;&quot;table-body&quot;&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Table row div vs. &lt;code&gt;tr&lt;/code&gt; element.&lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Another table row&lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div class&#x3D;&quot;table-foot&quot;&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Table foot row div vs. &lt;code&gt;tr&lt;/code&gt; element.&lt;/div&gt;
+    &lt;div class&#x3D;&quot;table-row&quot;&gt;Another table foot row&lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 9
+          Source: <code>frontend/components/classes/_common.scss</code>, line 79
         </div>
 
     </div>
@@ -154,3 +180,4 @@
 <!-- Automatically built using <a href="https://github.com/kss-node/kss-node">kss-node</a>. -->
 </body>
 </html>
+/html>
