--- a/styleguide/item-frontend-global-mixins-row.html
+++ b/styleguide/item-frontend-global-mixins-row.html
@@ -47,18 +47,18 @@
         <h4 class="kss-title kss-title--level-4">
           <a class="kss-title__permalink" href="#kssref-frontend-global-mixins-row">
             <span class="kss-title__ref">
-              2.4.3.10
+              2.3.3.10
               <span class="kss-title__permalink-hash">
                   #frontend.global.mixins.row
               </span>
             </span>
-            row-full()
+            row()
           </a>
         </h4>
 
 
           <div class="kss-description">
-            <p>Sets a sections to full width, used for containing main page sections.</p>
+            <p>Sets a sections max-width, used for containing main page sections.</p>
 
           </div>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_mixins.scss</code>, line 149
+          Source: <code>frontend/global/_mixins.scss</code>, line 123
         </div>
 
     </div>
@@ -104,4 +104,6 @@
 
 <!-- Automatically built using <a href="https://github.com/kss-node/kss-node">kss-node</a>. -->
 </body>
+</html>
+
 </html>
