--- a/styleguide/item-frontend.html
+++ b/styleguide/item-frontend.html
@@ -43,111 +43,69 @@
                 </a>
               </li>
               <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-base-forms">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.1.1</span
+                  ><span class="kss-nav__name">Forms</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-base-typography">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.1.2</span
+                  ><span class="kss-nav__name">Typography</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components">
                   <span class="kss-nav__ref ">2.2</span
                   ><span class="kss-nav__name">Components</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-alignment">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-classes">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.1</span
-                  ><span class="kss-nav__name">Alignment</span>
+                  ><span class="kss-nav__name">Common</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-buttons">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.2</span
-                  ><span class="kss-nav__name">Buttons</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-callout">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.3</span
-                  ><span class="kss-nav__name">Callouts</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-colors">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.4</span
-                  ><span class="kss-nav__name">Color Classes</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-common">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.5</span
-                  ><span class="kss-nav__name">Common Classes</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-layout">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
-                  ><span class="kss-nav__name">Layout</span>
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-classes">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.1</span
+                  ><span class="kss-nav__name">Classes</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-lib">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.7</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.2</span
                   ><span class="kss-nav__name">Libraries</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-lists">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.8</span
-                  ><span class="kss-nav__name">Lists</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-typography">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.9</span
-                  ><span class="kss-nav__name">Typography Classes</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-visibility">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.10</span
-                  ><span class="kss-nav__name">Visibility</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-forms">
-                  <span class="kss-nav__ref ">2.3</span
-                  ><span class="kss-nav__name">Forms</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global">
-                  <span class="kss-nav__ref ">2.4</span
+                  <span class="kss-nav__ref ">2.3</span
                   ><span class="kss-nav__name">Global Imports</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global-extendables">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.4.1</span
-                  ><span class="kss-nav__name">Sass Extendables</span>
+                  <span class="kss-nav__ref kss-nav__ref-child">2.3.1</span
+                  ><span class="kss-nav__name">Extendables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global-functions">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.4.2</span
-                  ><span class="kss-nav__name">Sass Functions</span>
+                  <span class="kss-nav__ref kss-nav__ref-child">2.3.2</span
+                  ><span class="kss-nav__name">Functions</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-global-mixins">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.4.3</span
-                  ><span class="kss-nav__name">Sass Mixins</span>
+                  <span class="kss-nav__ref kss-nav__ref-child">2.3.3</span
+                  ><span class="kss-nav__name">Mixins</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-layout">
-                  <span class="kss-nav__ref ">2.5</span
+                  <span class="kss-nav__ref ">2.4</span
                   ><span class="kss-nav__name">Layout</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-typography">
-                  <span class="kss-nav__ref ">2.6</span
-                  ><span class="kss-nav__name">Typography</span>
                 </a>
               </li>
             </ul>
