--- a/styleguide/section-application.html
+++ b/styleguide/section-application.html
@@ -34,37 +34,37 @@
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-base">
                   <span class="kss-nav__ref ">1.1</span
-                  ><span class="kss-nav__name">Application Base</span>
+                  ><span class="kss-nav__name">Base</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-components">
                   <span class="kss-nav__ref ">1.2</span
-                  ><span class="kss-nav__name">Application Components</span>
+                  ><span class="kss-nav__name">Components</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global">
                   <span class="kss-nav__ref ">1.3</span
-                  ><span class="kss-nav__name">Application Global</span>
+                  ><span class="kss-nav__name">Global</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-custom-variables">
                   <span class="kss-nav__ref kss-nav__ref-child">1.3.1</span
-                  ><span class="kss-nav__name">Application Custom Variables</span>
+                  ><span class="kss-nav__name">Custom Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-variables">
                   <span class="kss-nav__ref kss-nav__ref-child">1.3.2</span
-                  ><span class="kss-nav__name">Application Variables</span>
+                  ><span class="kss-nav__name">Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-layout">
                   <span class="kss-nav__ref ">1.4</span
-                  ><span class="kss-nav__name">Application Layout</span>
+                  ><span class="kss-nav__name">Layout</span>
                 </a>
               </li>
             </ul>
@@ -105,7 +105,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 69
+          Source: <code>style.scss</code>, line 78
         </div>
 
     </div>
@@ -120,7 +120,7 @@ styles.</p>
                   #application.base
               </span>
             </span>
-            Application Base
+            Base
           </a>
         </h2>
 
@@ -134,7 +134,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 84
+          Source: <code>style.scss</code>, line 93
         </div>
 
     </section>
@@ -149,7 +149,7 @@ styles.</p>
                   #application.components
               </span>
             </span>
-            Application Components
+            Components
           </a>
         </h2>
 
@@ -163,7 +163,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 100
+          Source: <code>style.scss</code>, line 109
         </div>
 
     </section>
@@ -178,7 +178,7 @@ styles.</p>
                   #application.global
               </span>
             </span>
-            Application Global
+            Global
           </a>
         </h2>
 
@@ -192,7 +192,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 76
+          Source: <code>style.scss</code>, line 85
         </div>
 
     </section>
@@ -207,7 +207,7 @@ styles.</p>
                   #application.global.custom-variables
               </span>
             </span>
-            Application Custom Variables
+            Custom Variables
           </a>
         </h3>
 
@@ -236,7 +236,7 @@ styles.</p>
                   #application.global.variables
               </span>
             </span>
-            Application Variables
+            Variables
           </a>
         </h3>
 
@@ -265,7 +265,7 @@ styles.</p>
                   #application.layout
               </span>
             </span>
-            Application Layout
+            Layout
           </a>
         </h2>
 
@@ -279,7 +279,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 92
+          Source: <code>style.scss</code>, line 101
         </div>
 
     </section>
