--- a/styleguide/item-application-base.html
+++ b/styleguide/item-application-base.html
@@ -52,7 +52,7 @@
                   #application.base
               </span>
             </span>
-            Application Base
+            Base
           </a>
         </h2>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 84
+          Source: <code>style.scss</code>, line 93
         </div>
 
     </div>
