--- a/styleguide/item-application-components.html
+++ b/styleguide/item-application-components.html
@@ -52,7 +52,7 @@
                   #application.components
               </span>
             </span>
-            Application Components
+            Components
           </a>
         </h2>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 100
+          Source: <code>style.scss</code>, line 109
         </div>
 
     </div>
