--- a/styleguide/item-application.html
+++ b/styleguide/item-application.html
@@ -34,37 +34,37 @@
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-base">
                   <span class="kss-nav__ref ">1.1</span
-                  ><span class="kss-nav__name">Application Base</span>
+                  ><span class="kss-nav__name">Base</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-components">
                   <span class="kss-nav__ref ">1.2</span
-                  ><span class="kss-nav__name">Application Components</span>
+                  ><span class="kss-nav__name">Components</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global">
                   <span class="kss-nav__ref ">1.3</span
-                  ><span class="kss-nav__name">Application Global</span>
+                  ><span class="kss-nav__name">Global</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-custom-variables">
                   <span class="kss-nav__ref kss-nav__ref-child">1.3.1</span
-                  ><span class="kss-nav__name">Application Custom Variables</span>
+                  ><span class="kss-nav__name">Custom Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-variables">
                   <span class="kss-nav__ref kss-nav__ref-child">1.3.2</span
-                  ><span class="kss-nav__name">Application Variables</span>
+                  ><span class="kss-nav__name">Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-layout">
                   <span class="kss-nav__ref ">1.4</span
-                  ><span class="kss-nav__name">Application Layout</span>
+                  ><span class="kss-nav__name">Layout</span>
                 </a>
               </li>
             </ul>
@@ -105,7 +105,7 @@ styles.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 69
+          Source: <code>style.scss</code>, line 78
         </div>
 
     </div>
