--- a/styleguide/item-frontend-global-mixins-row.html
+++ b/styleguide/item-frontend-global-mixins-row.html
@@ -52,13 +52,13 @@
                   #frontend.global.mixins.row
               </span>
             </span>
-            row()
+            row-full()
           </a>
         </h4>
 
 
           <div class="kss-description">
-            <p>Sets a sections max-width, used for containing main page sections.</p>
+            <p>Sets a sections to full width, used for containing main page sections.</p>
 
           </div>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/global/_mixins.scss</code>, line 123
+          Source: <code>frontend/global/_mixins.scss</code>, line 148
         </div>
 
     </div>
@@ -104,6 +104,4 @@
 
 <!-- Automatically built using <a href="https://github.com/kss-node/kss-node">kss-node</a>. -->
 </body>
-</html>
-
 </html>
