--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -99,6 +99,10 @@
 <li>And awesome <a href="https://github.com/bmarshall511/frontend/graphs/contributors">contributors</a></li>
 </ul>
 <h2 id="changelog">Changelog</h2>
+<h3 id="v4-1-1-tbd-">v4.1.1 (TBD)</h3>
+<ul>
+<li>Removed webpack from the build process, opting for gulp instead</li>
+</ul>
 <h3 id="v4-1-0-july-13-2017-">v4.1.0 (July 13, 2017)</h3>
 <ul>
 <li>Removed toolkit</li>
